# libfusion

./: CMakeLists.txt
apps/: gl_window.cpp  gl_window.h  main.cpp  main2.cpp  main_cli.cpp  system.cpp  system.h  window.cpp  window.h  window_manager.cpp  window_manager.h
cmake/: FindOpenNI2.cmake
example/open_ni/: main.cpp
example/tum/: main.cpp
fusion_lib/: CMakeLists.txt
fusion_lib/basic_io/: rgbd_camera.cpp  rgbd_camera.h
fusion_lib/feature_graph/: feature_graph.cpp  feature_graph.h  safe_queue.h
fusion_lib/fusion_core/: cuda_imgproc.cu  cuda_imgproc.h  cuda_utils.h  device_image.cpp  device_image.h  image_ops.cu  image_ops.h  intrinsic_matrix.cpp  intrinsic_matrix.h  revertable.h  revertable_var.h  rgbd_frame.cpp  rgbd_frame.h  rgbd_image.cpp  rgbd_image.h  vector_math.h
fusion_lib/icp_trackers/: dense_odometry.cpp  dense_odometry.h  pose_estimation.cu  pose_estimation.h  pose_estimator.cu  pose_estimator.h  reduce_sum.h  rgbd_tracker.cpp  rgbd_tracker.h  robust_estimator.cu
fusion_lib/reconstruction/: constants.h  dense_mapping.cpp  dense_mapping.h  depth_fusion.cu  map_proc.h  map_struct.cu  map_struct.h  prefix_sum.h  ray_tracing.cu  scene_mesh.cu
fusion_lib/reconstruction/cuda/: cuda_constants.h  depth_fusion.cu  map_struct.cu  ray_tracing.cu  scene_mesh.cu
fusion_lib/relocalization/: feature_point.cpp  feature_point.h  relocalizer.cpp  relocalizer.h  thread_queue.h
include/: DescriptorMatcher.h  FeatureExtractor.h  Frame.h  ICPTracker.h  KeyFrameGraph.h  Mapping.h  Odometry.h  Optimizer.h  PointCloud.h  PoseEstimator.h  Relocalizer.h  System.h  Window.h  macros.h  system.h  system_new.h
include/data_struct/: device_array.h  hash_entry.h  intrinsic_matrix.h  map_struct.h  rgbd_frame.h  voxel.h
include/features/: matcher.h
include/input/: tum_loader.h
include/keyframe_graph/: keyframe_graph.h
include/math/: matrix_type.h  vector_type.h
include/tracking/: build_pyramid.h  cuda_imgproc.h  device_image.h  icp_tracker.h  m_estimator.h  rgbd_odometry.h
include/utils/: safe_queue.h
include/visualization/: main_window.h
include/voxel_hashing/: fuse_frame.cuh  map_proc.h  mesh_scene.cuh  ray_tracing.cuh  voxel_hashing.h
shaders/: colour.shader  phong_vertex.shader
slam_lib/: CMakeLists.txt
slam_lib/feature_graph/: feature_graph.cpp  feature_graph.h  graph_optimizer.cpp  graph_optimizer.h
slam_lib/fusion_core/: device_image.h  rgbd_frame.cpp  rgbd_frame.h
slam_lib/icp_trackers/: dense_odometry.cpp  dense_odometry.h  rgbd_tracker.cpp  rgbd_tracker.h
slam_lib/reconstruction/: dense_mapping.cpp  dense_mapping.h
slam_lib/utils/: feature_extraction.cpp  feature_extraction.h
src/: DescriptorMatcher.cpp  FeatureExtractor.cpp  Frame.cpp  ICPTracker.cpp  KeyFrameGraph.cpp  Main.cpp  Mapping.cpp  Odometry.cpp  PointCloud.cpp  PoseEstimator.cpp  Relocalizer.cpp  System.cpp  Window.cpp  system.cpp  system_new.cpp
src/data_struct/: map_struct.cu  rgbd_frame.cpp
src/features/: matcher.cpp
src/input/: tum_loader.cpp
src/keyframe_graph/: keyframe_graph.cpp
src/tracking/: build_pyramid.cpp  cuda_imgproc.cu  device_image.cpp  directImageAlignment.cu  icp_tracker.cpp  m_estimator.cu  pose_estimator.cu  rgbd_odometry.cpp
src/visualization/: main_window.cpp
src/voxel_hashing/: depth_fusion.cu  fuse_frame.cu  mesh_scene.cu  prefix_sum.h  ray_tracing.cu  voxel_hashing.cpp
